- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    Qt Creator 4.6.0-beta1
 - 
    None
 
- 
        f9c959cee24b7a9837383379d104886d95360e56
 
Occasionally when deleting selected text QtC crashes, same place every time, the backtrace is attached.
| For Gerrit Dashboard: QTCREATORBUG-19607 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 217502,3 | QmlJSEditor: Move ownership of QmlJSTextMarks to document | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |